<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/icon"
        android:src="@drawable/img3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vocabType"
        style="@style/Base.V21.Theme.AppCompat"
        android:id="@+id/vocabTypeView"
        android:textColor="@color/logo_color"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/icon"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/icon"
        android:id="@+id/scrollView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonA"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/chapter1Text"
            android:textSize="18sp"
            android:background="@color/chapterBtn_background_color"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:onClick="onClick"/>

    </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chapter3Text"
        android:textSize="18sp"
        android:background="@color/chapterBtn_background_color"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:layout_marginBottom="62dp"
        android:layout_alignBottom="@+id/scrollView"
        android:layout_alignLeft="@+id/buttonB"
        android:layout_alignStart="@+id/buttonB"
        android:layout_alignRight="@+id/buttonB"
        android:layout_alignEnd="@+id/buttonB" />

    <Button
        android:id="@+id/buttonB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chapter2Text"
        android:textSize="18sp"
        android:background="@color/chapterBtn_background_color"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:layout_marginBottom="77dp"
        android:layout_above="@+id/buttonC"
        android:layout_centerHorizontal="true" />

</RelativeLayout>