...


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prevBtnText"
        android:id="@+id/prevWordBtn"
        android:textSize="18sp"
        android:background="#ffb39a6d"
        android:textAllCaps="false"
        android:onClick="onClickPrev"
        android:layout_alignTop="@+id/nextWordBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="49dp"
        android:layout_marginStart="49dp" />

    <Button
...
