...
    <string name="chapter11Text">S</string>
    -->

    <!-- Memorization Page Strings -->
    <string name="wordContent">Word Content</string>
    <string name="wordMeaning">Word Meaning</string>
    <string name="prevBtnText">Previous</string>
    <string name="nextBtnText">Next</string>
    <string name="sessionMarker">Try to remember it!(Review this word!)</string>

    <!-- SignUp Page Strings -->
    <string name="usernameSignUpHint">Enter your username</string>
    <string name="passSignUpHint">Enter your password</string>
    <string name="pass2SignUpHint">Confirm your password</string>
...
